<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StackPtr</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_stack_ptr_login">StackPtr Login</string>
    <string name="heading_use_existing_key">Use existing access key</string>
    <string name="heading_create_key">Create a new access key</string>
    <string name="btn_login">Login</string>
    <string name="refresh_user_list">Refresh user list</string>
    <string name="start_service">Start service</string>
    <string name="stop_service">Stop service</string>
    <string name="btn_scan_qr">Scan QR code</string>
    <string name="title_server_address">Server address</string>
    <string name="text_server_address">URI to where the StackPtr service is running.</string>
    <string name="compass_short_N">N</string>
    <string name="compass_short_NE">NE</string>
    <string name="compass_short_E">E</string>
    <string name="compass_short_SE">SE</string>
    <string name="compass_short_S">S</string>
    <string name="compass_short_SW">SW</string>
    <string name="compass_short_W">W</string>
    <string name="compass_short_NW">NW</string>
    <string name="compass_long_N">North</string>
    <string name="compass_long_NE">North East</string>
    <string name="compass_long_E">East</string>
    <string name="compass_long_SE">South East</string>
    <string name="compass_long_S">South</string>
    <string name="compass_long_SW">South West</string>
    <string name="compass_long_W">West</string>
    <string name="compass_long_NW">North West</string>
    <string name="no_update">no update</string>
    <string name="service_started">Service started</string>
    <string name="service_destroyed">StackPtr service destroyed</string>
    <string name="networkprovider_fail">NetworkProvider start failed</string>
    <string name="invalid_update_interval">Invalid value for update_interval</string>
    <string name="login_success">Logged in successfully, fetching API key</string>
    <string name="login_fail">Login failed, check user and password</string>
    <string name="creating_api_key">Creating API key</string>
    <string name="created_api_key">Created new API key</string>
    <string name="error_login_form">Error fetching login form</string>
    <string name="my_location_is_unknown">My location is unknown to the server.</string>

    <plurals name="seconds_ago_short">
        <item quantity="other">%ds ago</item>
    </plurals>
    <plurals name="minutes_ago_short">
        <item quantity="other">%dm ago</item>
    </plurals>
    <plurals name="hours_ago_short">
        <item quantity="other">%dh ago</item>
    </plurals>
    <plurals name="days_ago_short">
        <item quantity="other">%dd ago</item>
    </plurals>
    <plurals name="seconds_ago_long">
        <item quantity="one">a second ago</item>
        <item quantity="other">%d seconds ago</item>
    </plurals>
    <plurals name="minutes_ago_long">
        <item quantity="one">a minute ago</item>
        <item quantity="other">%d minutes ago</item>
    </plurals>
    <plurals name="hours_ago_long">
        <item quantity="one">an hour ago</item>
        <item quantity="other">%d hours ago</item>
    </plurals>
    <plurals name="days_ago_long">
        <item quantity="one">a day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <string name="title_activity_stack_ptr_map">StackPtrMap</string>
    <string name="hello_world">Hello world!</string>

    <string name="no_map_title">No mapping application installed</string>
    <string name="no_map_message">Please install a mapping application in order to view this location.</string>
    <string name="title_activity_stack_ptr_compass">StackPtrCompass</string>
    <string name="title_activity_stack_ptr_placemark">StackPtrPlacemark</string>
    <string name="title_activity_stack_ptr_web_view">StackPtrWebView</string>
    <string name="title_activity_stack_ptr_user_list">StackPtrUserList</string>

</resources>
