<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.stackunderflow.stackptr.StackPtrLogin"
    android:background="@android:color/background_dark">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/lblLoginHeader"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/btnLogin"
                android:layout_alignEnd="@+id/btnLogin"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="login..." />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="change server"
                android:id="@+id/button"
                android:textColor="#ff047ca4"
                android:layout_marginLeft="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:onClick="changeServer" />

            <EditText
                android:id="@+id/userField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Email"
                android:textColor="#ffffff"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/lblLoginHeader"
                android:inputType="textEmailAddress">

            <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/passField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userField"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="doLogin"
                android:text="@string/btn_login"
                android:textColor="@android:color/background_light"
                android:layout_below="@+id/passField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/heading_use_existing_key"
                android:id="@+id/lblApiKey"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btnLogin"
                android:layout_marginLeft="8dp" />

            <EditText
                android:id="@+id/ApiKeyField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="API Key"
                android:textColor="#ffffff"
                android:layout_below="@+id/lblApiKey"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:inputType="textNoSuggestions" />

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnScanQR"
                android:layout_alignEnd="@+id/ApiKeyField"
                android:onClick="scanQR"
                android:textColor="@android:color/background_light"
                android:layout_below="@+id/ApiKeyField"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:src="@android:drawable/ic_menu_camera"
                android:contentDescription="@string/btn_scan_qr"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/version"
                android:weightSum="1"
                android:id="@+id/UserLayout"
                android:layout_below="@+id/btnScanQR">

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:id="@+id/avatarView" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="username"
                        android:id="@+id/usernameView" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="status"
                        android:id="@+id/statusTextField" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Version"
                android:id="@+id/version"
                android:layout_alignBottom="@+id/statusView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="#FFF" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
